# llama-index-kreuzberg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.ai-rulez/: config.toml  config.yaml
.ai-rulez/context/: package-structure.md
.github/workflows/: ci.yaml  publish-node-parser.yaml  publish-reader.yaml  publish.yaml
node_parsers/llama-index-node-parser-kreuzberg/: CHANGELOG.md  README.md  pyproject.toml
node_parsers/llama-index-node-parser-kreuzberg/llama_index/node_parser/kreuzberg/: __init__.py  base.py
node_parsers/llama-index-node-parser-kreuzberg/tests/: conftest.py  test_integration.py  test_parser.py
readers/llama-index-readers-kreuzberg/: CHANGELOG.md  README.md  pyproject.toml
readers/llama-index-readers-kreuzberg/llama_index/readers/kreuzberg/: __init__.py  _config.py  _types.py  _utils.py  base.py
readers/llama-index-readers-kreuzberg/tests/: conftest.py  test_config.py  test_integration.py  test_reader.py
readers/llama-index-readers-kreuzberg/tests/fixtures/: sample.html  sample.txt
