[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "llama-index-node-parser-kreuzberg"
version = "0.1.0"
description = "Element-aware LlamaIndex node parser for kreuzberg-extracted documents"
readme = "README.md"
keywords = [
  "ai",
  "chunking",
  "document-structure",
  "kreuzberg",
  "llamaindex",
  "llm",
  "node-parser",
  "rag",
]
license = "MIT"
authors = [{ name = "Kreuzberg.dev", email = "admin@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
  "Topic :: Text Processing :: Indexing",
  "Typing :: Typed",
]
dependencies = [
  "llama-index-core>=0.12,<0.15",
]
maintainers = [{ name = "Goldziher" }]
urls.Homepage = "https://github.com/kreuzberg-dev/llama-index-kreuzberg"
urls.Issues = "https://github.com/kreuzberg-dev/llama-index-kreuzberg/issues"
urls.Kreuzberg = "https://github.com/kreuzberg-dev/kreuzberg"
urls.Repository = "https://github.com/kreuzberg-dev/llama-index-kreuzberg"

[dependency-groups]
dev = [
  "pytest>=9",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
]

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]

[tool.pytest]
ini_options.testpaths = ["tests"]
ini_options.asyncio_mode = "auto"

[tool.coverage]
run.source = ["llama_index/node_parser/kreuzberg"]
report.fail_under = 80

[tool.llamahub]
contains_example = false
import_path = "llama_index.node_parser.kreuzberg"

[tool.llamahub.class_authors]
KreuzbergNodeParser = "Goldziher"
